[metadata]
name = django-hibp
version = 0.1
author = Konstantin Weddige
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weddige/django-hibp
classifiers=
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python
[options]
install_requires = 
    Django
