[metadata]
name = django-hibp
version = 0.2
author = Konstantin Weddige
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weddige/django-hibp
classifiers=
    Development Status :: 4 - Beta
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
install_requires = 
    Django
py_modules = django_hibp
