[metadata]
name = django-hibp
version = 1.0
author = Konstantin Weddige
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weddige/django-hibp
classifiers=
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires = 
    Django
py_modules = django_hibp
